--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Charca/bootbot.git"
+    "url": "git+https://github.com/mrminhhuy/facebookchatbot.git"
   },
   "keywords": [
     "messenger",
